man/vzctl.8: minor cleanups to "enter --exec" description
(1) Separate "enter" in SYNOPSYS so it is clear that --exec only applies
    to "enter" command.

(2) Expand the "enter" description, refer to ssh(1) as a proper way.

(3) Simplify EXAMPLES a bit.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -10,10 +10,13 @@ vzctl [\fIflags\fR] \fBset\fR \fICTID\fR \fIparameters\fR [\fB--save\fR]
 .PP
 vzctl [\fIflags\fR] \fBdestroy\fR | \fBmount\fR | \fBumount\fR |
 \fBstart\fR | \fBstop\fR | \fBrestart\fR |
-\fBstatus\fR | \fBenter\fR \fICTID\fR [\fB--exec \fIcommand\fR [\fIarg\fR ...]]
+\fBstatus\fR \fICTID\fR
 .PP
 vzctl [\fIflags\fR] \fBexec\fR | \fBexec2\fR \fICTID\fR
 \fIcommand\fR [\fIarg\fR ...]
+.PP
+vzctl [\fIflags\fR] \fBenter\fR \fICTID\fR [\fB--exec \fIcommand\fR
+[\fIarg\fR ...]]
 .PP
 vzctl \fBrunscript\fR \fICTID\fR \fIscript\fR
 .PP
@@ -608,11 +611,17 @@ The same as \fBexec\fR, but return code is that of \fIcommand\fR.
 Run specified shell script in a container, if the container is not running
 it will be started.
 .IP "\fBenter\fR [\fB--exec \fIcommand\fR [\fIarg\fR ...]]" 4
-Enters into a container. This option is a back-door for host root only.
-You can use \fB--exec\fR option to run \fIcommand\fR with arguments
-right after entering into container.
-.IP
-NOTE: after exiting that command you still stay inside the container.
+Enters into a container (giving a container's root shell). This option
+is a back-door for host root only. The proper way to have CT root shell
+is to use \fBssh\fR(1).
+
+Option \fB--exec\fR is used to run \fIcommand\fR with arguments
+after entering into container. This is useful if command to be run
+requires a terminal (so \fBvzctl exec\fR can not be used) and for
+some reason you can not use \fBssh\fR(1).
+
+You need to log out manually from the shell to finish session
+(even if you specified \fB--exec\fR).
 .SS Other options
 .IP \fB--help\fR 4
 Prints help message with a brief list of possible options.
@@ -775,20 +784,17 @@ To execute command pipe \fBls -l / | sort\fR in this container:
 \f(CR	vzctl exec 1000 'ls -l / | sort'
 \fR
 .P
-To enter this container, execute command \fBapt-get install vim\fR and stay inside the container:
+To enter this container and execute command \fBapt-get install vim\fR:
 .br
 \f(CR	vzctl enter 1000 --exec apt-get install vim
 \fR
 .P
-For automatical logout use a construction \fB"\fIcommand\fR [\fIarg ...\fR]\fB && logout"\fR
-or \fB"\fIcommand\fR [\fIarg ...\fR]\fB ; logout"\fR.
-.br
-Quotation marks are required if you use \fB&&\fR or \fB;\fR in such complex command.
-A difference between using \fB&&\fR or \fB;\fR in command is shown below.
+Note that in the above example you will need to log out from the
+container's shell after apt-get finishes.
 .P
-To enter this container, execute command \fBapt-get install vim\fR and logout after
-successful installation (or stay inside the container if installation process failed)
-use \fB&&\fR:
+To enter this container, execute command \fBapt-get install vim\fR and
+logout after successful installation (or stay inside the container
+if installation process failed) use \fB&&\fR:
 .br
 \f(CR	vzctl enter 1000 --exec "apt-get install vim && logout"
 \fR
@@ -798,6 +804,7 @@ independently of exit code of installation process use \fB;\fR:
 .br
 \f(CR	vzctl enter 1000 --exec "apt-get install vim ; logout"
 \fR
+Note that you need to quote the command if you use \fB&&\fR or \fB;\fR.
 .P
 To stop this container:
 .br
