--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -499,7 +499,7 @@ designated by its \fImajor\fR and \fIminor\fR numbers. Device file have to be cr
 \fB--features\fR \fIname\fB:on\fR|\fBoff\fR
 Enable or disable a specific container feature.
 Known features are: \fBsysfs\fR, \fBnfs\fR, \fBsit\fR, \fBipip\fR, \fBppp\fR,
-\fBipgre\fR, \fBbridge\fR.
+\fBipgre\fR, \fBbridge\fR, \fBnfsd\fR.
 
 .TP
 \fBApply config\fR
