--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -446,7 +446,7 @@ designated by its \fImajor\fR and \fIminor\fR numbers. Device file have to be cr
 .TP
 \fB--features\fR \fIname\fR:\fBon|off\fR
 Enable or disable a specific container feature.
-Known features are: \fIsysfs\fR, \fInfs\fR, \fIsit\fR, \fIipip\fR.
+Known features are: \fBsysfs\fR, \fBnfs\fR, \fBsit\fR, \fBipip\fR, \fBnfsd\fR.
 .TP
 \fBApply config\fR
 .TP
