man/vzctl.8: minor fixes
(1) Fix typesetting for name argument, should be in bold
(2) Use an article where appropriate (I hope I did it right)
(3) Some rewording for better readability

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -512,8 +512,9 @@ The following parameters are not changed: \fBHOSTNAME\fR, \fBIP_ADDRESS\fR,
 \fBOSTEMPLATE\fR, \fBVE_ROOT\fR, and \fBVE_PRIVATE\fR.
 .TP
 \fB--applyconfig_map\fR \fIgroup\fR
-Apply container config parameters selected by \fIgroup\fR. Now only
-\fRname\fR argument is supported, to restore container name based on \fBNAME\fR
+Apply container config parameters selected by \fIgroup\fR. Now the only
+possible value for \fIgroup\fR is \fBname\fR:
+to restore container name based on \fBNAME\fR
 variable in container configuration file.
 
 .TP
