man/vzmigrate.8: document --remove-area default
http://bugzilla.openvz.org/879

Reported-by: mogorva <openvzbugzilla@tuxworx.hu>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -1,4 +1,4 @@
-.TH vzmigrate 8 "22 Feb 2008" "OpenVZ" "Containers"
+.TH vzmigrate 8 "15 Feb 2010" "OpenVZ" "Containers"
 
 .SH NAME
 vzmigrate - utility for container migration between hardware nodes.
@@ -23,7 +23,7 @@ entering password.
 .TP
 \fB-r\fR, \fB--remove-area\fR \fByes\fR|\fBno\fR
 Whether to remove a container area on source HN for the successfully
-migrated container.
+migrated container. Default is \fByes\fR.
 
 .TP
 \fB--ssh=\fIoptions\fR
