vzctl set --iptables: add support for ipt_recent
http://bugzilla.openvz.org/117

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -409,7 +409,7 @@ You can use the following values for \fIname\fR:
 \fBipt_length\fR, \fBip_conntrack\fR, \fBip_conntrack_ftp\fR,
 \fBip_conntrack_irc\fR, \fBipt_conntrack\fR, \fBipt_state\fR,
 \fBipt_helper\fR, \fBiptable_nat\fR, \fBip_nat_ftp\fR, \fBip_nat_irc\fR,
-\fBipt_REDIRECT\fR, \fBxt_mac\fR, \fBipt_owner\fR.
+\fBipt_REDIRECT\fR, \fBxt_mac\fR, \fBipt_recent\fR, \fBipt_owner\fR.
 
 .TP
 \fBNetwork devices control parameters\fR
