--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -29,8 +29,7 @@ migrated container. Default is \fByes\fR.
 .TP
 \fB--ssh=\fIoptions\fR
 Additional \fIoptions\fR that will be passed to ssh while establishing
-connection to destination HN. You may add options like \fB-c blowfish\fR
-or the like.
+connection to destination HN.
 
 .TP
 \fB--rsync=\fIoptions\fR
