man: vps.conf(5) renamed to ctid.conf(5)
The term VPS is way obsolete.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/ctid.conf.5
+++ b/man/ctid.conf.5
@@ -1,6 +1,6 @@
-.TH vps.conf 5 "10 Dec 2009" "OpenVZ" "Containers"
+.TH ctid.conf 5 "6 Apr 2010" "OpenVZ" "Containers"
 .SH NAME
-vps.conf \- configuration file for an OpenVZ container.
+\fIctid\fR.conf \- configuration file for an OpenVZ container.
 .SH SYNOPSIS
 \fB/etc/vz/conf/\fICTID\fB.conf\fR
 .SH DESCRIPTION
@@ -114,4 +114,4 @@ are divided by spaces.
 .BR vz.conf (5),
 .BR http://wiki.openvz.org/UBC .
 .SH LICENSE
-Copyright (C) 2001-2009, Parallels, Inc. Licensed under GNU GPL.
+Copyright (C) 2001-2010, Parallels, Inc. Licensed under GNU GPL.
