--- a/man/vzsplit.8
+++ b/man/vzsplit.8
@@ -32,7 +32,7 @@ Specify the swap size in Kbytes. If not provided in the option, the swap size wi
 \fBvzsplit\fR returns 0 upon a successful execution. If anything goes wrong, it
 returns 1.
 .SH SEE ALSO
-.BR vps.conf (5).
+.BR ctid.conf (5).
 .SH LICENSE
 Copyright (C) 2000-2009, Parallels, Inc. Licensed under GNU GPL.
 
