--- a/man/vzcfgvalidate.8
+++ b/man/vzcfgvalidate.8
@@ -21,6 +21,7 @@ There are three severity levels in output: Error, Warning, Recommendation.
 Normally, exit status is 0. On program execution error, exit status is 1.
 If validation failed exit status is 2.
 .SH SEE ALSO
-.BR ctid.conf (5).
+.BR ctid.conf (5),
+.BR http://wiki.openvz.org/UBC_consistency_check .
 .SH LICENSE
 Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
