man/*: add more of our man pages to SEE ALSO
In particular, vzctl(8) now refers to all pages we have,
and ctid.conf(5) refers to vzcfgvalidate(8), to help
increase awareness of tools/utilities that we have.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/ctid.conf.5
+++ b/man/ctid.conf.5
@@ -111,6 +111,7 @@ Corresponds to the \fB--searchdomain\fR option. Several search domains
 are divided by spaces.
 .SH SEE ALSO
 .BR vzctl (8),
+.BR vzcfgvalidate (8),
 .BR vz.conf (5),
 .BR http://wiki.openvz.org/UBC .
 .SH LICENSE
