--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -835,7 +835,17 @@ To permanently remove this container:
 .SH SEE ALSO
 .BR vz.conf (5),
 .BR ctid.conf (5),
+.BR arpsend (8),
+.BR vzcalc (8),
+.BR vzcfgvalidate (8),
+.BR vzcpucheck (8),
+.BR vzifup-post (8),
+.BR vzlist (8),
+.BR vzmemcheck (8),
+.BR vzmigrate (8),
+.BR vzpid (8),
 .BR vzquota (8),
+.BR vzsplit (8),
 .BR http://wiki.openvz.org/UBC .
 .SH LICENSE
 Copyright (C) 2000-2010, Parallels, Inc. Licensed under GNU GPL.
