--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -1,4 +1,4 @@
-.TH vzlist 8 "27 Nov 2009" "OpenVZ" "Containers"
+.TH vzlist 8 "26 May 2010" "OpenVZ" "Containers"
 .SH NAME
 vzlist \- containers listing utility
 .SH SYNOPSIS
@@ -191,6 +191,7 @@ diskinodes.h	DQINODES.H
 laverage	LAVERAGE
 cpulimit	CPULIM
 cpuunits	CPUUNI
+ioprio		IOP
 onboot	ONBOOT
 bootorder	BOOTORDER
 .TE
@@ -199,4 +200,4 @@ bootorder	BOOTORDER
 .SH RETURN CODE
 Returns 0 upon success.
 .SH COPYRIGHT
-Copyright (C) 2000-2009, Parallels, Inc. Licensed under GNU GPL.
+Copyright (C) 2000-2010, Parallels, Inc. Licensed under GNU GPL.
