vzlist: fix headers for disk quota fields
The appropriate parameters are diskspace and diskinodes, therefore
let's name the fields as DSPACE and DINODES, not DQBLOCKS and DQINODES.

Fix the man page appropriately.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -182,12 +182,12 @@ swappages.m	SWAPP.M
 swappages.b	SWAPP.B
 swappages.l	SWAPP.L
 swappages.f	SWAPP.F
-diskspace	DQBLOCKS
-diskspace.s	DQBLOCKS.S
-diskspace.h	DQBLOCKS.H
-diskinodes	DQINODES
-diskinodes.s	DQINODES.S
-diskinodes.h	DQINODES.H
+diskspace	DSPACE
+diskspace.s	DSPACE.S
+diskspace.h	DSPACE.H
+diskinodes	DINODES
+diskinodes.s	DINODES.S
+diskinodes.h	DINODES.H
 laverage	LAVERAGE
 cpulimit	CPULIM
 cpuunits	CPUUNI
