vzlist: add support for OSTEMPLATE field
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -75,6 +75,7 @@ ctid	CTID
 hostname	HOSTNAME
 name	NAME
 description	DESCRIPTION
+ostemplate	OSTEMPLATE
 ip	IP_ADDR
 status	STATUS
 kmemsize	KMEMSIZE
