vzmigrate: add ability to increase verbosity
Now one can specify "-v -v" (or "-vv") to further increase verbosity,
up to three ("-vvv"). Verbosity of 2 used to add -v to rsync, while
3 adds -v to ssh/scp.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -53,7 +53,8 @@ nothing has happened.
 .TP
 .B -v
 Verbose mode. Causes \fBvzmigrate\fP to print debugging messages about
-its progress.
+its progress.  Multiple \fB-v\fR options increase the verbosity.
+The maximum is 3.
 
 .SH EXAMPLES
 Migration of CT #101 to \fI192.168.1.130\fR with downtime:
