--- a/man/ctid.conf.5
+++ b/man/ctid.conf.5
@@ -1,4 +1,4 @@
-.TH ctid.conf 5 "6 Apr 2010" "OpenVZ" "Containers"
+.TH ctid.conf 5 "13 Nov 2010" "OpenVZ" "Containers"
 .SH NAME
 \fIctid\fR.conf \- configuration file for an OpenVZ container.
 .SH SYNOPSIS
@@ -84,6 +84,8 @@ Corresponds to the \fB--dcachesize\fR option.
 Corresponds to the \fB--numiptent\fR option.
 .IP \fBCPUUNITS\fR
 Corresponds to the \fB--cpuunits\fR option.
+.IP \fBDISK_QUOTA\fR="\fByes\fR|\fBno\fR"
+If this is set to \fBno\fR, disk quota is not set up for this CT.
 .IP \fBDISKSPACE\fR="\fIsoftlimit\fR[:\fIhardlimit\fR]"
 Corresponds to the \fB--diskspace\fR option.
 .IP \fBDISKINODES\fR="\fIsoftlimit\fR[:\fIhardlimit\fR]"
