vzctl set: implement --diskquota on|off
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -423,6 +423,10 @@ delete network device from a specified container
 .TP
 \fBDisk quota parameters\fR
 .TP
+\fB--diskquota\fR \fByes\fR|\fBno\fR
+allows to enable or disable disk quota for a container. By default,
+a global value from \fBvz.conf\fR(5) is used.
+.TP
 \fB--diskspace\fR \fInum\fR[:\fInum\fR]
 sets soft and hard disk quota limits, in blocks. First parameter is soft limit,
 second is hard limit. One block is currently equal to 1Kb.
