man/*: fix/emphasize DISK_QUOTA/--diskquota description
Global config have a global default for DISK_QUOTA, which
can be overriden on a per-CT basis. It was always working
that way but was not documented. Fix it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/ctid.conf.5
+++ b/man/ctid.conf.5
@@ -1,4 +1,4 @@
-.TH ctid.conf 5 "13 Nov 2010" "OpenVZ" "Containers"
+.TH ctid.conf 5 "16 Nov 2010" "OpenVZ" "Containers"
 .SH NAME
 \fIctid\fR.conf \- configuration file for an OpenVZ container.
 .SH SYNOPSIS
@@ -85,6 +85,7 @@ Corresponds to the \fB--numiptent\fR option.
 .IP \fBCPUUNITS\fR
 Corresponds to the \fB--cpuunits\fR option.
 .IP \fBDISK_QUOTA\fR="\fByes\fR|\fBno\fR"
+Corresponds to the \fB--diskquota\fR option.
 If this is set to \fBno\fR, disk quota is not set up for this CT.
 .IP \fBDISKSPACE\fR="\fIsoftlimit\fR[:\fIhardlimit\fR]"
 Corresponds to the \fB--diskspace\fR option.
