man/vzctl.8: add/describe 'vzquota on failed' exit code (60)
After commits d75908d0 and 84f9ab9329 vzctl may now exit with
VZ_DQ_ON (60) exit code, which means 'vzquota on failed'.
Document it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -814,10 +814,12 @@ Unable to unmount container
 Unable to delete a container
 .IP 53
 Container private area not exist
+.IP 60
+\fBvzquota on\fR failed
 .IP 61
 \fBvzquota init\fR failed
 .IP 62
-\fBvzquota on\fB or \fBvzquota setlimit\fR failed
+\fBvzquota setlimit\fR failed
 .IP 63
 Parameter \fBDISKSPACE\fR not set
 .IP 64
