man/vz.conf.5: fix a reference to vz initscript.
Let's call it "vz initscript" not "/etc/init.d/vz script"
in all the places.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vz.conf.5
+++ b/man/vz.conf.5
@@ -16,7 +16,7 @@ will be ignored.
 .SS Global parameters
 .IP \fBVIRTUOZZO\fR=\fByes\fR|\fBno\fR
 This parameter can be set to \fByes\fR or \fBno\fR, and used by
-\f(CW/etc/init.d/vz\fR script. In case it is not
+the \fBvz\fR init script. In case it is not
 set to \fByes\fR, nothing will be done to boot up OpenVZ on this node.
 .IP "\fBLOCKDIR\fR=\fIdirectory\fR"
 Set the directory to put lock files to.
