vzctl start: fix exit code if ioprio set failed
Return code from ve_ioprio_set() is propagated all the way up to main()
and is used as vzctl exit code:
main()
  run_action()
    start()
      vps_start()
        vps_start_custom()
          vps_setup_res()
            ve_ioprio_set()

So we ended up exiting with -1 (255) from vzctl if ioprio set failed.

Fix it by introducing VZ_IO_SET. Document it in vzctl(8) man page.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -889,6 +889,8 @@ Error setting container name
 Waiting for container start failed
 .IP 139
 Error saving container configuration file
+.IP 148
+Error setting container IO parameters (ioprio)
 .SH EXAMPLES
 To create and start "basic" container with ID of 1000 using
 \fIfedora-core-5\fR OS template and IP address of 192.168.10.200:
