etc/init.d/vz*: use separate IPTABLES_MODULES variable
This commit tries to untangle the mess caused by the fact that the IPTABLES
parameter in global vz.conf(5) configuration file was used for two purposes:

1. Set the list of kernel modules to load before loading OpenVZ modules.
2. Set the default IPTABLES/--iptables values for containers.

Now, not all iptables modules are recognized by vzctl (and have a dedicated
bit in iptables_mask passed on to the kernel). So in case you need to use
functionality (1) but the module is not recognized by vzctl, you get the
following warning (totally harmless, but pretty annoying):

	Warning: Unknown iptable module: ipt_iprange, skipped

We solve this by having two separate variables in vz.conf:

	IPTABLES: default for IPTABLES/--iptables value for CTs

	IPTABLES_MODULES: list of kernel modules to preload

Now, to retain backward compatibility, we use IPTABLES for list
of modules to load if IPTABLES_MODULES is empty.

While at it, also

 - document it in vz.conf(5) man page
 - add the module loading functionality to vz-gentoo initscript

http://bugzilla.openvz.org/1814

Reported-by: Curtis <curtis@isparks.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vz.conf.5
+++ b/man/vz.conf.5
@@ -37,6 +37,10 @@ If the value of this parameter is set to \fByes\fR, no attempt to load
 kernel modules is made by the \fBvz\fR initscript. This is helpful
 on systems which have OpenVZ-specific features compiled into the kernel
 (i. e. not as modules).
+.IP \fBIPTABLES_MODULES\fR="\fImodule\ module\ ...\fR"
+List of iptables kernel modules to be loaded by \fBvz\fR initscript
+before loading OpenVZ modules (which is required for iptables
+to work inside containers). If not set, value of \fBIPTABLES\fR is used.
 .IP \fBVZFASTBOOT\fR=\fByes\fR|\fBno\fR
 If the value of this parameter is set to \fByes\fR, \fBvz\fR initscript called
 with \fBstart\fR argument will start the containers with uncleanly
@@ -81,6 +85,9 @@ numeric CT ID.
 .IP \fBCONFIGFILE\fR=\fIname\fR
 Default configuration file for \fBcreate\fR action, corresponds to
 \fB--config\fR option.
+.IP \fBIPTABLES\fR="\fImodule\ module\ ...\fR"
+List of iptables modules to be enabled for containers, corresponds
+to \fB--iptables\fR option.
 .PP
 Most of the other parameters that appear in per-container configuration files
 \fBctid.conf\fR(5) can be also set here. Still, it is recommended to keep
